--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.4.2",
     "uuid": "^3.3.2",
     "ws": "7.0.1"
   }
