--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "license": "ISC",
   "dependencies": {
     "apollo-boost": "^0.4.3",
+    "apollo-server-express": "^2.6.7",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "4.17.1",
     "express-graphql": "^0.8.0",
     "graphql": "^14.4.2",
+    "graphql-subscriptions": "^1.1.0",
     "react-apollo": "^2.5.8",
+    "subscriptions-transport-ws": "^0.9.16",
     "uuid": "^3.3.2",
     "ws": "7.0.1"
   }
