--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Socket server for chatty app",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon server.js"
   },
   "keywords": [
     "websocket"
@@ -24,5 +25,8 @@
     "subscriptions-transport-ws": "^0.9.16",
     "uuid": "^3.3.2",
     "ws": "7.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
